[package]
name = "serve-log"
version = "0.1.0"
authors = ["wcrbrm <webcerebrium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0.0"
actix-cors = "0.2.0"
actix-files = "0.2"
env_logger = "0.7"
futures = "0.3.5"
chrono = "0.4.19"

