[package]
name = "serve-log"
version = "1.0.0"
authors = ["wcrbrm <webcerebrium@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atty = "0.2"
axum = { version = "0.7" }
bytes = "1.6.1"
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["derive", "env"] }
http-body-util = "0.1.2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "tokio", "trace", "limit", "fs"] }
tracing = "0.1.40"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
